<resources>
    <string name="app_name">IScheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="年" />

    <string name="月">Month</string>
    <string name="Month">月</string>
    <string name="Year">年</string>
    <string name="TimeTable">時間割</string>
    <string name="Event">行事</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option">設定</string>
    <string name="header">I scheduler</string>
    <string name="Schedule_add">スケジュール登録</string>


</resources>
