<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_month">

    <fragment
        android:id="@+id/nav_year"
        android:name="com.example.ischeduler.ui.Year.YearFragment"
        android:label="@string/Year"
        tools:layout="@layout/fragment_year" />

    <fragment
        android:id="@+id/nav_month"
        android:name="com.example.ischeduler.ui.Month.MonthFragment"
        android:label="@string/Month"
        tools:layout="@layout/fragment_month">
        <action
            android:id="@+id/action_nav_month_to_nav_year"
            app:destination="@id/nav_year" />
        <action
            android:id="@+id/action_nav_month_to_nav_timetable"
            app:destination="@id/nav_timetable" />
        <action
            android:id="@+id/action_nav_month_to_nav_event"
            app:destination="@id/nav_event" />
        <action
            android:id="@+id/action_nav_month_to_optionFragment"
            app:destination="@id/nav_option" />
    </fragment>

    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.example.ischeduler.timetableFragment"
        android:label="@string/TimeTable"
        tools:layout="@layout/timetable_fragment" />
    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.ischeduler.EventFragment"
        android:label="@string/Event"
        tools:layout="@layout/event_fragment" />
    <fragment
        android:id="@+id/nav_option"
        android:name="com.example.ischeduler.ui.Option.OptionFragment"
        android:label="@string/option"
        tools:layout="@layout/fragment_option" />
</navigation>